--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>
         Counter
     </title>
-    <body>
+    <body style="">
         <div id="root"></div>
         <script src="bundle.js"></script>
     </body>
