added a real title to the main window

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <title>
-        Counter
+        StarcCraft 2 Campaign Manager
     </title>
     <body style="">
         <div id="root"></div>
