fixed minor typo i missed on commit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <title>
-        StarcCraft 2 Campaign Manager
+        StarCraft 2 Campaign Manager
     </title>
     <body style="">
         <div id="root"></div>
