added typescript support download management

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>
         StarCraft 2 Campaign Manager
     </title>
-    <body style="">
+    <body>
         <div id="root"></div>
         <script src="bundle.js"></script>
     </body>
